--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ textarea {
 
 #subtask-con {
   display: flex;
-  margin-top: 16px;
-  margin-bottom: 20px;
+  margin-top: 12px 0;
   align-items: center;
 }
 
@@ -81,6 +80,7 @@ textarea {
 
 .subtask-checkbox {
   display: flex;
+  padding: 8px 0;
 }
 .subtask-checkbox input:first-child {
   width: 18px;
@@ -93,6 +93,12 @@ textarea {
   font-weight: 500;
   padding: 8px;
   color: #414141;
+}
+
+#sub-tasks{
+    margin-bottom: 32px;
+    height: 120px;
+    overflow-y: scroll;
 }
 
 #action-buttons {
@@ -160,6 +166,8 @@ textarea {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  overflow-y: scroll;
+  height: 60vh;
 }
 
 h2 {
@@ -209,4 +217,32 @@ h2 {
   font-weight: 500;
   margin-top: 16px;
   padding: 0;
+}
+
+
+.right-section .column .card .sub-tasks-oncard{
+margin-top: 12px;
+height: 130px;
+overflow-y: scroll;
+}
+
+.right-section .column .card .subtask-checkbox-oncard{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-content: center;
+    align-items: center;
+    padding: 11px 8px;
+}
+
+.right-section .column .card .subtask-checkbox-oncard input{
+    width: 18px;
+    height: 18px;
+}
+
+.right-section .column .card .subtask-checkbox-oncard p{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #2B2D31;
 }
