--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
+  background-color: red;
+  height: 100%;
 }
 .container {
   display: flex;
   width: 100%;
-  height: 90vh;
+  height: 100%;
 }
 
 .left-section {
   width: 366px;
   background-color: #fff;
   padding: 24px;
-  height: 90vh;
+  height: 100vh;
 }
 .left-section #title {
   font-weight: 700;
@@ -124,7 +128,6 @@ textarea {
   display: flex;
   flex-direction: row;
   gap: 8px;
-  margin-bottom: 32px;
   flex-wrap: wrap;
 }
 
@@ -238,8 +241,8 @@ textarea {
   display: flex;
   flex-direction: row;
   bottom: 24px;
-  position: absolute;
   gap: 12px;
+  margin-top: 20px;
 }
 
 #action-buttons #clear_all {
@@ -280,7 +283,6 @@ textarea {
   border: 1.4px solid #000;
 }
 
-/* Right section, 70% width */
 .right-section {
   width: 100%;
   background-color: #f3f4f7;
@@ -289,10 +291,11 @@ textarea {
   padding: 40px 32px;
   flex-direction: row;
   gap: 24px;
+  overflow-x: scroll;
 }
 
 .column {
-  width: 100%;
+  width: 320px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -306,7 +309,7 @@ textarea {
   gap: 24px;
   overflow-y: scroll;
   height: 100vh;
-  width: 100%;
+  width: 320px;
 }
 
 h2 {
@@ -321,7 +324,7 @@ h2 {
 
 .right-section .column .card {
   padding: 20px;
-  width: 320px;
+  width: auto;
   border-radius: 8px;
   background-color: #fcfcfd;
   box-shadow: 0px 0.5px 2px 0px #1018284d;
@@ -383,4 +386,41 @@ h2 {
   font-weight: 600;
   line-height: 24px;
   color: #2b2d31;
+}
+
+
+/* Responsove */
+
+@media  screen and (max-width: 768px) {
+  .body{
+    height: 100vh;
+    width: 100%;
+
+  }
+  .container {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  .right-section{
+    width: 100%;
+    height: 700px;
+    overflow-y: visible;
+  }
+  #todo-column,
+  #doing-column,
+  #done-column {
+    overflow-y: visible;
+    height: 700px;
+  }
+  .right-section .column {
+    width: 100%;
+    overflow-y: visible;
+  }
+
+  .left-section{
+    width: 100%;
+  }
+
 }
