--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -15,10 +14,10 @@ body {
 }
 
 .left-section {
-  width: 366px;
   background-color: #fff;
   padding: 24px;
-  height: 100vh;
+
+  height: auto;
 }
 .left-section #title {
   font-weight: 700;
@@ -26,7 +25,7 @@ body {
   line-height: 30px;
   color: #667085;
   border: none;
-  width: 318px;
+  width: 100%;
   padding: 12px 6px;
 }
 
@@ -44,6 +43,7 @@ textarea {
   display: flex;
   margin-top: 12px 0;
   align-items: center;
+  justify-content: space-between;
 }
 
 #subtask-con div {
@@ -359,6 +359,7 @@ h2 {
   font-weight: 500;
   margin-top: 16px;
   padding: 0;
+  width: 100%;
 }
 
 .right-section .column .card .sub-tasks-oncard {
@@ -388,25 +389,24 @@ h2 {
   color: #2b2d31;
 }
 
-
 /* Responsove */
 
-@media  screen and (max-width: 768px) {
-  .body{
-    height: 100vh;
-    width: 100%;
-
-  }
+@media screen and (max-width: 768px) {
   .container {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
   }
 
-  .right-section{
+  .right-section {
+    margin: 0px;
     width: 100%;
     height: 700px;
     overflow-y: visible;
+    overflow-x: scroll;
   }
   #todo-column,
   #doing-column,
@@ -418,9 +418,4 @@ h2 {
     width: 100%;
     overflow-y: visible;
   }
-
-  .left-section{
-    width: 100%;
-  }
-
 }
